# paper_checking

backend/: .env.example  .gitignore  Containerfile  main.py  populate_data.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 489357d3f035_initial_changes.py  59bea6c951a0_ip_addr_in_logging.py  c76db341f68a_added_question_to_question_bank.py  c8ba20738b33_initial_schema.py  fcca4c1c3fb6_converted_all_ids_execpt_user_id.py
backend/auth/: jwt_utils.py  utils.py
backend/database/: database.py
backend/database/models/: __init__.py  images.py  logs.py  questions.py  users.py  workbook.py
backend/images/: s3.py
backend/scripts/: create_image.sh  keys.sh  run-minio.sh
frontend/: .containerignore  Containerfile  index.html  package-lock.json  package.json  pnpm-lock.yaml  podman-compose.yml  vite.config.js
frontend/src/electron/: main.js
frontend/src/ui/: App.jsx  extx.pl~
frontend/src/ui/Components/: AdminDashboard.jsx  EvaluationPage.jsx  EvaluatorDashboard.jsx  Header.jsx  LoginPage.jsx  ReportsPage.jsx  Sidebar.jsx  UserDashboard.jsx  useLocalStorage.js
